# learning-terraform

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml
modules/: README.md  main.tf  variables.tf
modules/task-01/: README.md  main.tf  outputs.tf
modules/task-02/: README.md  main.tf  outputs.tf
src/: main.tf
use-cases/: README.md
use-cases/use-case-1/: README.md  main.tf  variables.tf  versions.tf
use-cases/use-case-2/: README.md  main.tf  variables.tf
use-cases/use-case-3/: README.md  main.tf  outputs.tf  variables.tf
use-cases/use-case-3/assets/apis/roles/: schema.graphql
use-cases/use-case-3/assets/apis/roles/resolvers/createRole/: request.vtl
use-cases/use-case-3/assets/apis/roles/resolvers/deleteRole/: resolver.js
use-cases/use-case-3/assets/apis/roles/resolvers/getRole/: request.vtl  response.vtl
use-cases/use-case-3/assets/apis/roles/resolvers/listRoles/: resolver.js
use-cases/use-case-3/assets/apis/roles/resolvers/updateRole/: request.vtl
