[tool.poetry]
name = "learn-terraform"
version = "0.1.0"
description = "A repository for learning anything about Terraform and Infrastructure as Code"
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.0.3"
pytest = "^8.0.1"
awscli = "^1.32.103"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
