[tool.poetry]
name = "terraform-usecases"
version = "0.1.0"
description = "A collection of terraform use cases"
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.0.3"
pytest = "^8.0.1"
awscli = "^1.32.103"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
